manifests/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: userverification 
  labels:
    app: userverification
spec:
  replicas: 3
  selector:
    matchLabels:
      app: userverification
  template:
    metadata:
      labels:
        app: userverification 
    spec:
      containers:
        - name: userverification
          image: fluffyspoon.azurecr.io/userverification
          ports:
          - containerPort: 8080
          livenessProbe:
              httpGet:
                  path: actuator/health/live
                  port: 8080
              initialDelaySeconds: 5
              periodSeconds: 10
          readinessProbe:
              httpGet:
                  path: actuator/health/ready
                  port: 8080
              initialDelaySeconds: 5
              periodSeconds: 10
