manifests/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: userverification
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: userverification.0d136eaef9f24e1c828e.westeurope.aksapp.io
    http:
      paths:
      - backend:
          serviceName: userverification
          servicePort: 80
        path: /
